--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,35 +1,944 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+// #app {
+//   max-width: 1280px;
+//   margin: 0 auto;
+//   padding: 2rem;
+//   font-weight: normal;
+// }
 
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
+// a,
+// .green {
+//   text-decoration: none;
+//   color: hsla(160, 100%, 37%, 1);
+//   transition: 0.4s;
+// }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+  // a:hover {
+  //   background-color: hsla(160, 100%, 37%, 0.2);
+  // }
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+
+}
+body {
+  background: #FFF4EA;
+  color: #2B2B3F;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+.index{
+  height: 100vh;
+}
+.experence, .project, .skills, .index, .project-detail, .web-company {
+  padding: 6%;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.web-content {
+  gap: 20px;
+  display: flex;
+  flex-flow: wrap;
+  .items {
+    background: #ffdebe;
+    width: calc(33% - 10px);
+    height: 320px;
+    overflow: hidden;
+    position: relative;
+    display: block;
+    cursor: pointer;
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background: rgb(255 197 111 / 2%);
+      position: absolute;
+      left:0;
+      transition: all 0.5s;
+    }
+    img {
+      width: 100%;
+      transition: all 0.5s;
+    }
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
+      &::before {
+        background: transparent;
+      }
+    }
+  }
+}
+.tab-list {
+  display: flex;
+  gap: 8px;
+  padding: 0 0 24px 0;
+  .tab {
+    padding: 8px 24px;
+    border: 1px solid #2B2B3F;
+    border-radius: 35px;
+    &.active {
+      color: #fff4ea;
+      background:#2B2B3F;
+    }
+  }
+}
+.detail-content {
+  img {
+    width: 100%;
+    display: block;
+  }
+}
+.back-btn {
+  font-family: bm jua;
+  color: transparent;
+  background-image: linear-gradient(90deg, rgba(243, 115, 53, 0.568627451) 0%, #F9779D 50%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: shine 5s linear infinite;
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  padding: 180px 0 60px 0;
+  position: relative;
+  &::before {
+    content: "";
+    width: 280px;
+    height: 200px;
+    background-image: radial-gradient(farthest-corner at 30px 30px, #ffc56f 40%, #F22FB0 100%);
+    border-radius: 50%;
+    filter: blur(30px);
+    position: absolute;
+    z-index: -1;
+    opacity: 0.6;
+  }
+  .back-btn-icon {
+    width: 13px;
+    display: block;
+    img {
+      width: 100%;
+    }
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+}
+.contact {
+  text-align: center;
+  font-size: 30px;
+  line-height: 1.8;
+  .contact-info {
+    font-weight: bold;
+  }
+  .contact-mail {
+    font-family: bm jua;
+    color: transparent;
+    background-image: linear-gradient(90deg, #f3733591 0%, #F9779D 50%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: shine 5s linear infinite;
+  }
+  .bottm-hand {
+    margin-top: 40px;
+    animation: dong 1s infinite;
+  }
+}
+@keyframes dong {
+  0% {
+      transform: translate(0px, 0px);
+   }
+   50% {
+      transform: translate(0px, -10px);
+   }
+   100% {
+      transform: translate(0px, 0px);
+   }
+}
+@keyframes shine {
+  0% {
+    background-position: 0 80px;
+  }
+  90% {
+    background-position: 1000px 0;
+  }
+}
+.project {
+  .project-content {
+    gap: 40px;
+  }
+  .project-items {
+    width: 50%;
+    flex-shrink: 1;
+    color: #2B2B3F;
+    text-decoration: none;
+    &:hover {
+      .title{
+        background-size: 100% 2px;
+      }
+      .project-img img {
+        transform: scale(1.1);
+      }
+    }
+    .title {
+      font-size: 24px;
+      font-weight: bold;
+      position: relative;
+      display: inline-block;
+
+      transition-property: all;
+      transition-duration: .6s;
+      transition-timing-function: ease-out;
+      line-height: 1.5;
+      display: inline;
+      background-image: linear-gradient(to right, #000 0%, #000 100%);
+      background-repeat: no-repeat;
+      background-size: 0 2px;
+      background-position: 0 100%;
+    }
+    .more-btn {
+      color: #FF786B;
+      font-size: 16px;
+      font-weight: 700;
+      padding-top: 24px;
+      transition: all 0.3s;
+      span {
+        padding-left: 4px;
+        transition: all 0.3s;
+      }
+      &:hover {
+        color: #F97995;
+        span {
+          padding-left: 6px;
+        }
+      }
+    }
+    .project-img {
+      overflow: hidden;
+      height: 360px;
+      img {
+        width: 100%;
+        transition: all 0.5s;
+      }
+    }
+    .info-top {
+      padding: 30px 0 12px 0;
+    }
+    .info-bottom {
+      font-size: 16px;
+      letter-spacing: 1px;
+      line-height: 28px;
+      height: 170px;
+    }
+  }
+}
+.experence {
+  position: relative;
+  .flex {
+    gap: 44px
+  }
+  &::before {
+    content: "";
+    width: 800px;
+    height: 800px;
+    background: #FFC56F;
+    position: absolute;
+    border-radius: 50%;
+    left: -22%;
+    top: 20%;
+    filter: blur(120px);
+    z-index: -1;
+    opacity: 0.85;
+  }
+  &::after {
+    // background: radial-gradient(ellipse at top, #ffc56f, transparent), radial-gradient(ellipse at bottom, #f22fb0, transparent);
+    content: "";
+    width: 1200px;
+    height: 800px;
+    background-image: radial-gradient(farthest-corner at 30px 30px, #ffc56f 40%, #F22FB0 100%);
+    position: absolute;
+    border-radius: 50%;
+    right: -22%;
+    bottom: -25%;
+    z-index: -1;
+    filter: blur(150px);
+  }
+}
+.main-title {
+  display: flex;
+  align-items: baseline;
+  position: relative;
+  padding: 0 0 30px 28px;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    background: url(../../images/title-deco.svg) no-repeat;
+    width: 24px;
+    height: 18px;
+  }
+  .title-en {
+    font-size: 55px;
+    font-weight: bold;
+
+  }
+  .title-tw {
+    font-size: 22px;
+  }
+  span {
+    width: 1px;
+    height: 20px;
+    background: #2B2B3F;
+   margin: 0 12px;
+  }
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills {
+
+  .skills-content {
+    padding-top: 48px;
+  }
+  .skill-items {
+    width: 33%;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      right: 130px;
+      bottom: 0;
+      width: 225px;
+      height: 180px;
+      background-size: contain;
+    }
+    &:first-child::before {
+      background: url(../../images/items-01.svg) no-repeat;
+      background-size: contain;
+    }
+    &:nth-child(2)::before{
+      background: url(../../images/items-02.svg) no-repeat;
+      background-size: contain;
+    }
+    &:last-child::before {
+      background: url(../../images/items-03.svg) no-repeat;
+      background-size: contain;
+    }
+    .info-top {
+      display: flex;
+      align-items: baseline;
+      position: relative;
+      &::before {
+        content: "";
+        width: 22px;
+        height: 4px;
+        background: #2B2B3F;
+        position: absolute;
+        bottom: -24px;
+      }
+      .title{
+        font-size: 24px;
+        padding-right: 8px;
+        font-weight: 500;
+      }
+      span{
+        font-size: 16px;
+      }
+    }
+    ul {
+      font-size: 16px;
+      padding: 48px 0 0 12px;
+      line-height: 30px;
+      font-weight: 500;
+    }
+  }
+}
+.exp-content{
+  .time-line {
+    display: flex;
+    gap: 20px;
+    margin-top: 16px;
+    &:last-child .time-line {
+      display: none;
+    }
+    .col-sm-1 {
+      .time-line-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        width: 100%;
+        height: 100%;
+        margin-top: 10px;
+        .time-dot {
+          width: 20px;
+          height: 20px;
+          border: 1px solid #2B2B3F;
+          position: relative;
+          border-radius: 50%;
+          flex-shrink: 0;
+          &::before {
+            content: "";
+            width: 10px;
+            height: 10px;
+            background: #2B2B3F;
+            border-radius: 50%;
+            position: absolute;
+            left: calc(50% - 5px);
+            top: calc(50% - 5px);
+          }
+        }
+        .time-line {
+          width: 2px;
+          height: 100%;
+          background-image: linear-gradient(to bottom, #333 35%, rgba(255, 255, 255, 0) 0%);
+          background-position: left;
+          background-size: 2px 10px;
+          background-repeat: repeat-y;
+
+        }
+      }
+    }
+    .col-sm-11{
+      .info-top {
+        align-items: baseline;
+        display: flex;
+        .job-title {
+          font-size: 24px;
+          font-weight: 500;
+          padding-right: 16px;
+        }
+        span {
+          font-size: 16px;
+        }
+      }
+      .info-introduction {
+        font-size: 16px;
+        color: rgba(0, 0, 0, 0.7);
+        padding-top: 8px;
+        letter-spacing: 1px;
+      }
+      .info-bottom {
+        padding: 24px 0;
+        ul {
+          padding: 0 0 0 16px;
+          line-height: 28px;
+          font-size: 16px;
+          letter-spacing: 1px;
+        }
+      }
+    }
+  }
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 1000px;
+    height: 1000px;
+    background: url(images/gradient.png) no-repeat;
+    z-index: -1;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    right: -23%;
+    top: 17%;
+    width: 1600px;
+    height: 900px;
+    background: linear-gradient(to right, #FFC56F, #FF7BCA 85%, #f55fb1 100%);
+    z-index: -1;
+    filter: blur(120px);
+    border-radius: 50%;
+    opacity: 0.85;
+  }
+}
+@keyframes down {
+  0% {
+      transform: translate(0px, 0px);
+   }
+   50% {
+      transform: translate(0px, -5px);
+   }
+   100% {
+      transform: translate(0px, 0px);
+   }
+}
+.index {
+  .index-content {
+    position: relative;
+    align-items: center;
+    height: calc(100vh - 12%);
+    display: flex;
+  }
+  .arrow-down {
+    position: absolute;
+    bottom: 2.2%;
+    left: calc(50% - 13px);
+    animation: down 2s infinite;
+  }
+  .bottom-txt {
+    font-size: 24px;
+    position: absolute;
+    bottom: 8%;
+    font-weight: 700;
+    span {
+      padding: 0 12px;
+      letter-spacing: 1px;
+      &:first-child {
+        padding-left: 0;
+        position: relative;
+        &::before {
+          content: "";
+          width: 1px;
+          height: 22px;
+          position: absolute;
+          right: 0;
+          top: 5px;
+          background: #2B2B3F;
+        }
+      }
+    }
+  }
+}
+header {
+  display: flex;
+  white-space: nowrap;
+  justify-content: space-between;
+  position: absolute;
+  width: 100%;
+  padding: 2.5% 6%;
+  z-index: 3;
+  position: fixed;
+  .years {
+    font-size: 22px;
+    font-weight: 550;
+    letter-spacing: 1px;
+    text-decoration: underline;
+  }
+  ul {
+    display: flex;
+    list-style: none;
+    gap: 60px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    a {
+      color: #2B2B3F;
+      text-decoration: none;
+    }
+  }
+}
+.content {
+  display: flex;
+  position: relative;
+  // align-items: center;
+  // height: calc(100vh - 18%);
+
+}
+.content-left {
+  flex: 1;
+  // padding: 12% 0 0;
+  .txt-lg {
+    font-size: 200px;
+    font-family: zcoolwenyiti;
+    line-height: 180px;
+    display: inline-block;
+  }
+  .txt-md {
+    font-size: 65px;
+
+  }
+  .content-btn {
+    margin-top: 58px;
+    ul {
+      display: flex;
+      list-style: none;
+      gap: 12px;
+      padding: 0;
+      &:first-child {
+        margin-bottom: 16px;
+      }
+      li {
+        padding: 8px 30px;
+        border: 1px solid;
+        border-radius: 30px;
+        font-size: 22px;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.content-right {
+  flex: 1;
+  background: url(images/index-pic.png) no-repeat;
+  background-size: contain;
+  width: 50%;
+  height: 790px;
+  position: absolute;
+  right: 0;
+  bottom: 2.5%;
+}
+
+@media (max-width: 1580px) {
+  .web-content {
+    gap: 20px;
+    display: flex;
+    flex-flow: wrap;
+    .items {
+      height: 280px;
+    }
+  }
+  .content-right {
+    bottom: 15%;
+    height: 600px;
+  }
+  .index {
+    .bottom-txt{
+      font-size: 20px;
+      span:first-child::before {
+        height: 16px;
+      }
+    }
+    .content-left {
+      .txt-lg {
+        font-size: 175px;
+        font-family: zcoolwenyiti;
+        line-height: 175px;
+        display: inline-block;
+      }
+      .txt-md {
+        font-size: 53px;
+        letter-spacing: 8px;
+        font-family: "noto sans oriya";
+      }
+      .content-btn {
+        margin-top: 30px;
+        ul {
+          gap: 12px;
+          &:first-child {
+            margin-bottom: 12px;
+          }
+        }
+      }
+    }
+  }
+  header {
+    .years{
+      font-size: 18px;
+    }
+  }
+}
+@media (max-width: 1280px)  {
+  .content-right {
+    height: 450px;
+    bottom: 20%;
+  }
+  .index {
+    .bottom-txt {
+      font-size: 18px;
+    }
+  }
+  .web-content .items {
+    width: calc(33% - 12px);
+    height: 210px;
+  }
+}
+@media (max-width: 1024px) {
+  .main-title {
+    .title-en {
+      font-size: 36px;
+    }
+    .title-tw {
+      font-size: 18px;
+    }
+    span{
+      height: 15px;
+    }
+  }
+  .back-btn {
+    font-size: 24px;
+    padding: 110px 30px 0;
+    .back-btn-icon{
+      width: 10px;
+      height: 37px;
+    }
+    &::before {
+      width: 200px;
+      height: 100px;
+    }
+  }
+  .main-title {
+    padding: 0 0 30px 28px;
+  }
+  .index {
+    .content-left {
+      padding: 15% 0 0;
+      text-align: center;
+      .txt-lg {
+        font-size: 120px;
+        line-height: 120px;
+      }
+      .txt-md {
+        font-size: 18px;
+        padding-left: 12px;
+        font-weight: 600;
+        letter-spacing: 13px;
+      }
+      .content-btn{
+        ul {
+          justify-content: center;
+        }
+      }
+    }
+    .content-right {
+      right: 0;
+      height: 500px;
+      bottom: 11%;
+      width: 100%;
+      margin: 0 auto;
+      background-position: 50% 0%;
+    }
+    .bottom-txt {
+      font-size: 20px;
+      position: absolute;
+      bottom: 2%;
+      right: calc(50% - 108px);
+      font-weight: 700;
+    }
+    .arrow-down {
+      width: 22px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .project {
+    .project-items {
+      .project-img {
+        height: auto;
+      }
+    }
+  }
+  .experence, .project, .skills, .index {
+    padding: 4%;
+  }
+  .exp-content {
+    width: 50%;
+    .time-line .col-sm-11 .info-top, .time-line .col-sm-11 .info-top span {
+      display: block;
+    }
+    .time-line {
+      gap: 12px;
+    }
+  }
+  .skills {
+    .skill-items {
+      &::before {
+        right: 0;
+        width: 165px;
+        height: 120px;
+      }
+      ul {
+        line-height: 28px;
+        padding: 40px 0 0 12px;
+      }
+      .info-top {
+        display: block;
+        &::before {
+          width: 20px;
+          height: 3px;
+        }
+      }
+    }
+    .skills-content {
+      gap: 36px;
+      padding-top: 25px;
+    }
+  }
+}
+@media (max-width: 768px){
+  .web-content .items {
+    width: calc(50% - 12px);
+    height: 160px;
+  }
+  .index {
+    .content-left {
+      padding: 12% 0 0;
+      .txt-lg {
+        font-size: 95px;
+        line-height: 95px;
+      }
+      .txt-md {
+        font-size: 16px;
+        letter-spacing: 10px;
+      }
+    }
+    .content-right {
+      height: 400px;
+    }
+  }
+  .project {
+    .project-content {
+      display: block;
+    }
+    .project-items {
+      .info-bottom {
+        line-height: 26px;
+        height: 145px;
+      }
+      .info-top {
+        padding: 20px 0 8px 0;
+      }
+      .more-btn {
+        padding: 0 0 35px 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 580px){
+  .back-btn {
+    font-size: 24px;
+    padding: 65px 30px 0;
+    &::before {
+      width: 160px;
+      height: 80px;
+    }
+    .back-btn-icon {
+      width: 8px;
+      height: 30px;
+    }
+  }
+  .tab-list .tab {
+    padding: 6px 16px;
+    font-size: 14px;
+  }
+  .web-content {
+    gap: 16px;
+    .items {
+      width: calc(50% - 8px);
+      height: 130px;
+    }
+  }
+  .index {
+    .arrow-down {
+      width: 16px;
+      left: calc(50% - 8px);
+    }
+    .bottom-txt {
+      font-size: 16px;
+      right: calc(50% - 94px);
+    }
+    .content-left {
+      padding: 9% 0 0;
+      .txt-lg {
+        font-size: 70px;
+        line-height: 70px;
+      }
+      .txt-md {
+        font-size: 15px;
+        letter-spacing: 5px;
+      }
+      .content-btn{
+        margin-top: 20px;
+        ul {
+          gap: 8px;
+          &:first-child {
+            margin-bottom: 8px;
+          }
+          li {
+            font-size: 15px;
+            padding: 6px 20px;
+          }
+        }
+      }
+    }
+    .content-right {
+      height: 300px;
+    }
+  }
+  .experence {
+    .flex {
+      display: block;
+    }
+    .exp-content {
+      width: 100%;
+      .time-line {
+        .col-sm-11 {
+          .info-bottom {
+            padding: 16px 0 10px;
+          }
+          .info-top .job-title {
+            font-size: 22px;
+          }
+          .info-introduction {
+            letter-spacing: 0;
+          }
+        }
+      }
+    }
+  }
+  .main-title {
+    padding: 0px 0px 12px 20px;
+
+    &::before {
+      width: 16px;
+      height: 16px;
+      background-size: contain;
+    }
+    span {
+      height: 12px;
+      margin: 0 10px;
+    }
+    .title-en {
+      font-size: 28px;
+    }
+    .title-tw {
+      font-size: 16px;
+    }
+  }
+  .project {
+    .project-items {
+      .info-bottom {
+        height: auto;
+      }
+      .more-btn {
+        padding: 20px 0 30px 0;
+      }
+    }
+  }
+  .skills {
+    .skills-content {
+      display: block;
+      .skill-items {
+        width: 100%;
+        padding-bottom: 30px;
+        &::before {
+          width: 225px;
+          height: 180px;
+        }
+        .info-top .title {
+          font-size: 22px;
+        }
+        ul {
+          padding: 30px 0 0 12px;
+        }
+      }
+    }
   }
 }
