--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -727,10 +727,10 @@ header {
       }
     }
   }
-  .content-right {
-    height: 450px;
-    bottom: 20%;
-  }
+  // .content-right {
+  //   height: 450px;
+  //   bottom: 20%;
+  // }
   .index {
     .bottom-txt {
       font-size: 18px;
@@ -788,14 +788,14 @@ header {
         }
       }
     }
-    .content-right {
-      right: 0;
-      height: 500px;
-      bottom: 11%;
-      width: 100%;
-      margin: 0 auto;
-      background-position: 50% 0%;
-    }
+    // .content-right {
+    //   right: 0;
+    //   height: 500px;
+    //   bottom: 11%;
+    //   width: 100%;
+    //   margin: 0 auto;
+    //   background-position: 50% 0%;
+    // }
     .bottom-txt {
       font-size: 20px;
       position: absolute;
@@ -1040,43 +1040,43 @@ body:not(.scroll-over-point) .bottm-hand {
 }
 
 .animate__delay-1s {
-  animation-delay: 1s;
+  --animation-delay: 1s;
 }
 .animate__delay-05s {
-  animation-delay: 0.5s;
+  --animation-delay: 0.5s;
 }
 .animate__delay-03s {
-  animation-delay: 0.3s;
+  --animation-delay: 0.3s;
 }
 .animate__delay-06s {
-  animation-delay: 0.6s;
+  --animation-delay: 0.6s;
 }
 .animate__delay-08s {
-  animation-delay: 0.8s;
+  --animation-delay: 0.8s;
 }
 .animate__delay-12s {
-  animation-delay: 1.2s;
+  --animation-delay: 1.2s;
 }
 .animate__delay-125s {
-  animation-delay: 1.25s;
+  --animation-delay: 1.25s;
 }
 .animate__delay-13s {
-  animation-delay: 1.3s;
+  --animation-delay: 1.3s;
 }
 .animate__delay-135s {
-  animation-delay: 1.35s;
+  --animation-delay: 1.35s;
 }
 .animate__delay-14s {
-  animation-delay: 1.4s;
+  --animation-delay: 1.4s;
 }
 .animate__delay-15s {
-  animation-delay: 1.5s;
+  --animation-delay: 1.5s;
 }
 .animate__delay-16s {
-  animation-delay: 1.6s;
+  --animation-delay: 1.6s;
 }
 .animate__delay-17s {
-  animation-delay: 1.7s;
+  --animation-delay: 1.7s;
 }
 
 .site-nav {
