--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -4,29 +4,120 @@
   --animate-delay: 1s;
 }
 
-// #app {
-//   max-width: 1280px;
-//   margin: 0 auto;
-//   padding: 2rem;
-//   font-weight: normal;
-// }
 
-// a,
-// .green {
-//   text-decoration: none;
-//   color: hsla(160, 100%, 37%, 1);
-//   transition: 0.4s;
-// }
 
-@media (hover: hover) {
-  // a:hover {
-  //   background-color: hsla(160, 100%, 37%, 0.2);
-  // }
+
+// 手機版樣式
+
+h1 {
+  text-align: center;
+  letter-spacing: 3px;
+  font-size: 4em;
+  margin-top: 30vh;
+  line-height: 1.3;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-@media (min-width: 1024px) {
-
+.hamburger {
+  position: fixed;
+  width: 35px;
+  height: 35px;
+  top: 20px;
+  right: 30px;
+  z-index: 5;
+  display: none;
 }
+.hamburger div {
+  position: relative;
+  width: 35px;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #2B2B3F;
+  margin-top: 7px;
+  transition: all 0.3s ease-in-out;
+}
+
+#toggle {
+  display: none;
+}
+
+#toggle:checked + .hamburger .top {
+  transform: rotate(-45deg);
+  margin-top: 22.5px;
+}
+#toggle:checked + .hamburger .meat {
+  transform: rotate(45deg);
+  margin-top: -5px;
+}
+#toggle:checked + .hamburger .bottom {
+  transform: scale(0);
+}
+#toggle:checked + .hamburger + .mobile-nav {
+  // opacity: 1;
+  display: block;
+}
+
+.mobile-nav nav a:active .mobile-nav{
+display: none;
+}
+.mobile-nav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #FFF4EA;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  z-index: 1;
+  display: none;
+}
+.mobile-nav .mobile-nav-wrapper {
+  position: relative;
+  overflow-y: auto;
+  height: 100%;
+}
+
+nav {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right:0;
+  bottom:0;
+  z-index: -1;
+  overflow: hidden;
+}
+nav a {
+  margin-top: 1.25em;
+  color: #2B2B3F;
+  // opacity: 0;
+  text-decoration: none;
+  font-size: 2.3em;
+  letter-spacing: 3px;
+  transition: all 0.1s ease;
+}
+nav a:first-child {
+  margin-top: 0;
+}
+
+#toggle:checked + .hamburger + .mobile-nav .mobile-nav-wrapper nav a {
+  opacity: 0.9;
+  transform: scale(1);
+}
+#toggle:checked + .hamburger + .mobile-nav .mobile-nav-wrapper nav a:hover {
+  opacity: 1;
+  color: white;
+  transform: scale(1.2);
+}
+
+// ====================
 
 html {
   scroll-behavior: smooth;
@@ -113,7 +204,7 @@ body {
 }
 .detail-content {
   margin: 30px auto 0;
-  width: 88%;
+  width: 90%;
   img {
     width: 100%;
     display: block;
@@ -328,10 +419,36 @@ body {
     width: 24px;
     height: 18px;
   }
+  &.inner-page-title {
+    justify-content: space-between;
+    .back-index-btn {
+      font-size: 18px;
+      font-family: bm jua;
+      color: transparent;
+      background-image: linear-gradient(90deg, rgba(243, 115, 53, 0.568627451) 0%, #F9779D 50%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      animation: shine 12s linear infinite;
+      position: relative;
+      cursor: pointer;
+      &::before {
+        content: "";
+        width: 150px;
+        height: 150px;
+        background-image: radial-gradient(farthest-corner at 30px 30px, #ffc56f 40%, #F22FB0 100%);
+        border-radius: 50%;
+        filter: blur(30px);
+        position: absolute;
+        z-index: -1;
+        opacity: 0.6;
+        top: -40px;
+
+      }
+    }
+  }
   .title-en {
     font-size: 55px;
     font-weight: bold;
-
   }
   .title-tw {
     font-size: 22px;
@@ -341,6 +458,10 @@ body {
     height: 20px;
     background: #2B2B3F;
    margin: 0 12px;
+  }
+  .title {
+    display: flex;
+    align-items: baseline;
   }
 }
 .flex {
@@ -399,9 +520,9 @@ body {
       }
     }
     ul {
-      font-size: 16px;
+      font-size: 22px;
       padding: 48px 0 0 12px;
-      line-height: 30px;
+      line-height: 40px;
       font-weight: 500;
     }
   }
@@ -497,7 +618,6 @@ body {
     height: 1000px;
     background: url(images/gradient.png) no-repeat;
     z-index: -1;
-    // animation-delay: 0.5s;
   }
   &:after {
     content: "";
@@ -525,12 +645,6 @@ body {
    }
 }
 .index {
-  .index-content {
-    position: relative;
-    align-items: center;
-    height: calc(100vh - 12%);
-    display: flex;
-  }
   .arrow-down {
     position: absolute;
     bottom: 2.2%;
@@ -540,7 +654,8 @@ body {
   .bottom-txt {
     font-size: 24px;
     position: absolute;
-    bottom: 8%;
+    bottom: 0%;
+    left:0;
     font-weight: 700;
     span {
       padding: 0 12px;
@@ -561,7 +676,7 @@ body {
     }
   }
 }
-header {
+.site-nav {
   display: flex;
   white-space: nowrap;
   justify-content: space-between;
@@ -594,42 +709,6 @@ header {
 .content {
   display: flex;
   position: relative;
-  // align-items: center;
-  // height: calc(100vh - 18%);
-
-}
-.content-left {
-  flex: 1;
-  // padding: 12% 0 0;
-  .txt-lg {
-    font-size: 200px;
-    font-family: zcoolwenyiti;
-    line-height: 180px;
-    display: inline-block;
-  }
-  .txt-md {
-    font-size: 65px;
-
-  }
-  .content-btn {
-    margin-top: 58px;
-    ul {
-      display: flex;
-      list-style: none;
-      gap: 12px;
-      padding: 0;
-      &:first-child {
-        margin-bottom: 16px;
-      }
-      li {
-        padding: 8px 30px;
-        border: 1px solid;
-        border-radius: 30px;
-        font-size: 22px;
-        font-weight: bold;
-      }
-    }
-  }
 }
 
 .content-right {
@@ -649,15 +728,90 @@ header {
   50% {transform:translateY(40px);}
   100% {transform:translateY(20px);}
 }
-@media (max-width: 1660px) {
+
+.su-main {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.su-grandparent {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  position: relative;
+}
+
+.su-parent {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: center;
+
+  .su-child-left {
+    flex: 1 50%;
+
+    display: flex;
+    align-items: center;
+    // justify-content: end;
+    // padding-left: 10px;
+    // padding-right: 10px;
+  }
+
+  .su-child-right {
+    flex: 1 50%;
+    height: 70vh;
+    background-image: url(images/index-pic.png);
+    background-size: contain;
+    background-position: 10px center;
+    background-repeat: no-repeat;
+  }
+
+  .su-text-content {
+    .txt-lg {
+      font-size: 200px;
+      line-height: 200px;
+      font-family: 'Noto Sans TC', sans-serif;
+      font-weight: 700;
+    }
+    .txt-md {
+      font-size: 65px;
+      letter-spacing: 7px;
+    }
+    .content-btn {
+      margin-top: 58px;
+      ul {
+        display: flex;
+        list-style: none;
+        gap: 12px;
+        padding: 0;
+        &:first-child {
+          margin-bottom: 16px;
+        }
+        li {
+          padding: 8px 30px;
+          border: 1px solid;
+          border-radius: 30px;
+          font-size: 22px;
+          font-weight: bold;
+        }
+      }
+    }
+
+  }
+
+  .su-image-content {
+
+  }
+}
+
+@media (max-width: 1580px) {
   .web-content {
     .items {
       height: 255px;
     }
   }
-}
-
-@media (max-width: 1580px) {
   .project {
     .project-content {
       gap: 40px;
@@ -690,32 +844,28 @@ header {
         height: 16px;
       }
     }
-    .content-left {
-      .txt-lg {
-        font-size: 175px;
-        font-family: zcoolwenyiti;
-        line-height: 175px;
-        display: inline-block;
-      }
-      .txt-md {
-        font-size: 53px;
-        letter-spacing: 8px;
-        font-family: "noto sans oriya";
-      }
-      .content-btn {
-        margin-top: 30px;
-        ul {
-          gap: 12px;
-          &:first-child {
-            margin-bottom: 12px;
-          }
-        }
-      }
-    }
   }
-  header {
+  .site-nav {
     .years{
       font-size: 18px;
+    }
+  }
+}
+@media (max-width: 1440px) {
+  .su-parent {
+    .su-text-content {
+      .txt-lg {
+        font-size: 150px;
+        line-height: 170px;
+      }
+      .txt-md {
+        font-size: 45px;
+      }
+      .content-btn {
+        ul li {
+          font-size: 20px;
+        }
+      }
     }
   }
 }
@@ -727,10 +877,6 @@ header {
       }
     }
   }
-  // .content-right {
-  //   height: 450px;
-  //   bottom: 20%;
-  // }
   .index {
     .bottom-txt {
       font-size: 18px;
@@ -741,7 +887,56 @@ header {
     height: 210px;
   }
 }
+
 @media (max-width: 1024px) {
+  .site-nav {
+    display:none;
+  }
+  .hamburger {
+    display: block;
+  }
+  .su-parent{
+    gap:45px;
+    flex-direction: column;
+    .su-child-right {
+      flex: 1 0 38vh;
+      justify-content: center;
+      background-position: center center;
+    }
+    .su-child-left {
+      justify-content: center;
+    }
+    .su-text-content {
+      text-align: center;
+      .txt-lg{
+        font-size: 135px;
+        line-height: 150px;
+      }
+      .txt-md {
+        font-size: 30px;
+        letter-spacing: 10px;
+
+      }
+      .content-btn {
+        margin-top: 35px;
+        ul {
+          gap: 10px;
+          margin-bottom: 10px;
+          li {
+            font-size: 22px;
+            padding: 6px 20px;
+          }
+          justify-content: center;
+
+        }
+      }
+    }
+  }
+  .bottom-txt {
+    position: initial;
+    width: 100%;
+    text-align: center;
+  }
   .main-title {
     .title-en {
       font-size: 36px;
@@ -752,6 +947,7 @@ header {
     span{
       height: 15px;
     }
+
   }
   .back-btn {
     font-size: 24px;
@@ -769,37 +965,10 @@ header {
     padding: 0 0 30px 28px;
   }
   .index {
-    .content-left {
-      padding: 15% 0 0;
-      text-align: center;
-      .txt-lg {
-        font-size: 120px;
-        line-height: 120px;
-      }
-      .txt-md {
-        font-size: 18px;
-        padding-left: 12px;
-        font-weight: 600;
-        letter-spacing: 13px;
-      }
-      .content-btn{
-        ul {
-          justify-content: center;
-        }
-      }
-    }
-    // .content-right {
-    //   right: 0;
-    //   height: 500px;
-    //   bottom: 11%;
-    //   width: 100%;
-    //   margin: 0 auto;
-    //   background-position: 50% 0%;
-    // }
     .bottom-txt {
       font-size: 20px;
       position: absolute;
-      bottom: 2%;
+      bottom: 4%;
       right: calc(50% - 108px);
       font-weight: 700;
     }
@@ -842,7 +1011,7 @@ header {
         height: 120px;
       }
       ul {
-        line-height: 28px;
+        line-height: 35px;
         padding: 40px 0 0 12px;
       }
       .info-top {
@@ -860,26 +1029,23 @@ header {
   }
 }
 @media (max-width: 768px){
+  .su-parent {
+    .su-text-content {
+      .txt-lg {
+        font-size: 110px;
+        line-height: 120px;
+      }
+      .txt-md {
+        font-size: 30px;
+      }
+
+    }
+  }
   .web-content .items {
     width: calc(50% - 12px);
     height: 160px;
   }
-  .index {
-    .content-left {
-      padding: 12% 0 0;
-      .txt-lg {
-        font-size: 95px;
-        line-height: 95px;
-      }
-      .txt-md {
-        font-size: 16px;
-        letter-spacing: 10px;
-      }
-    }
-    .content-right {
-      height: 400px;
-    }
-  }
+
   .project {
     .project-content {
       display: block;
@@ -932,33 +1098,6 @@ header {
       font-size: 16px;
       right: calc(50% - 94px);
     }
-    .content-left {
-      padding: 9% 0 0;
-      .txt-lg {
-        font-size: 70px;
-        line-height: 70px;
-      }
-      .txt-md {
-        font-size: 15px;
-        letter-spacing: 5px;
-      }
-      .content-btn{
-        margin-top: 20px;
-        ul {
-          gap: 8px;
-          &:first-child {
-            margin-bottom: 8px;
-          }
-          li {
-            font-size: 15px;
-            padding: 6px 20px;
-          }
-        }
-      }
-    }
-    .content-right {
-      height: 300px;
-    }
   }
   .experience {
     .flex {
@@ -1006,7 +1145,7 @@ header {
         height: auto;
       }
       .more-btn {
-        padding: 20px 0 30px 0;
+        padding: 16px 0 40px 0;
       }
     }
   }
@@ -1015,7 +1154,7 @@ header {
       display: block;
       .skill-items {
         width: 100%;
-        padding-bottom: 30px;
+        padding-bottom: 50px;
         &::before {
           width: 225px;
           height: 180px;
@@ -1025,6 +1164,36 @@ header {
         }
         ul {
           padding: 30px 0 0 12px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+
+  .su-parent {
+    gap: 10px;
+    .su-text-content {
+      .txt-lg {
+        font-size: 65px;
+        line-height: 75px;
+      }
+      .txt-md {
+        letter-spacing: 4px;
+        font-size: 18px;
+      }
+      .content-btn {
+        ul {
+          gap: 8px;
+          &:first-child {
+            margin-bottom: 8px;
+          }
+          li {
+            font-size: 15px;
+            height: 40px;
+
+          }
         }
       }
     }
@@ -1078,6 +1247,9 @@ body:not(.scroll-over-point) .bottm-hand {
 .animate__delay-17s {
   --animation-delay: 1.7s;
 }
+.animate__delay-50s {
+  --animation-delay: 5s;
+}
 
 .site-nav {
   transition: backdrop-filter 0.5s;
@@ -1098,50 +1270,3 @@ body.scroll-over-point .experience {
 }
 
 
-.su-main {
-  max-width: 1920px;
-  margin: 0 auto;
-}
-
-.su-grandparent {
-  display: flex;
-  width: 100%;  
-  height: 100%;
-  align-items: center;
-}
-
-.su-parent {
-  width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: stretch;
-  justify-content: center;
-
-  .su-child-left {
-    flex: 1 50%;
-    
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .su-child-right {
-    flex: 1 50%;
-    height: 70vh;
-    background-image: url(images/index-pic.png);
-    background-size: contain;
-    background-position: 10px center;
-    background-repeat: no-repeat;
-  }
-
-  .su-text-content {
-    // height: 300px;
-    background: green;
-  }
-
-  .su-image-content {
-
-  }
-}
