修改工作經歷

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -137,6 +137,9 @@ body {
   position: relative;
   box-sizing: border-box;
 }
+.experience {
+  padding-top: 12%;
+}
 .project-detail {
   .company_url {
     a {
